manifests/gonzo-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: nginx
  name: gonzo-svc
  namespace: gonzo
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx
  sessionAffinity: None
  type: ClusterIP
